--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,21 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
-         <build>
+<build>
   <plugins>
+    <!-- Maven Surefire Plugin to run your test runners -->
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>3.0.0-M7</version>
-      <configuration>
-        <includes>
-          <include>**/Run_*.java</include>
-        </includes>
-      </configuration>
+     <configuration>
+  <includes>
+    <include>**/Run_*.java</include>
+  </includes>
+  <parallel>classes</parallel>
+  <threadCount>2</threadCount>
+  <useSystemClassLoader>false</useSystemClassLoader>
+</configuration>
     </plugin>
   </plugins>
 </build>
